--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Essa é apenas umas brincadeiras em C baseadas no livro C - completo e total.
+Essa são apenas algumas brincadeiras em C baseadas no livro C - completo e total.
 
 Tudo que está aqui pode ser utilizado por outras pessoas desde que citem o livro e a mim.
 
